# todo_app

./: Dockerfile  README.md  TODO  __azurite_db_table__.json  docker-compose.yml  pyproject.toml  rye.readme.txt
.github/workflows/: main.yml
docker/: .Dockerfile  docker-compose.yml
docker/helper/: init.sql
helper/: init.sql
src/: alembic.ini
src/alembic/: env.py
src/alembic/versions/: 530cdd59c34d_first_commit.py  74ed8db94c4b_first_commit.py  79e2b4708b9a_fix_duplicate_metadata_issue.py  ef53b5eff469_first_commit.py
src/tests/crud/: test_users.py
src/tests/todo_app/internal/: test_helper.py
src/tests/todo_app/routers/: test_users.py
src/todo_app/: dependencies.py  main.py
src/todo_app/database/: crud.py  database.py  models.py  schemas.py
src/todo_app/database(OLD)/: crud.py  database.py  main.py  models.py
src/todo_app/internal/: encrypt.py  exceptions.py  helper.py
src/todo_app/routers/: todos.py  users.py
src/todo_app/sqlmodel_orm/: crud.py  database.py  main.py  models.py
src/todo_app/sqlmodel_orm/models/: base_model_metadata.py  todo_model.py  user_model.py
src/todo_app/tests/: conftest.py
src/todo_app/tests/constants/: users.py
src/todo_app/tests/crud/: test_users.py
src/todo_app/tests/factories/: users_factory.py
